--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <!-- navbar start-->
-    <nav class="navbar navbar-expand-sm navbar-lg bg-clr shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-lg bg-clr shadow-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Nana Wartana</a>
+        <a class="navbar-brand text-white " href="#">NWR27</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
